[project]
name = "zoho-people-attendance"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "dhilipsiva", email = "dhilipsiva@pm.me" }
]
dependencies = [
    "requests>=2.32.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=24.4.2",
    "python-lsp-server>=1.11.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["main"]
